# MortgageLen

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: mortgageLen.yml
mortgage_platform/: manage.py
mortgage_platform/core/: settings.py  urls.py  wsgi.py
mortgage_platform/mortgage/: apps.py  urls.py
mortgage_platform/mortgage/processes/: amortization_calculations.py  calculator_process.py
mortgage_platform/mortgage/processes/tests/: test_amortization_calculations.py  test_calculator_process.py
mortgage_platform/mortgage/serializers/: calculator_serializer.py  enums.py
mortgage_platform/mortgage/serializers/tests/: test_calculator_serializer.py
mortgage_platform/mortgage/views/: __init__.py  calculator_view.py
mortgage_platform/mortgage/views/tests/: mock_data.py  test_calculator_view.py
